Add .env file sync between agent and Netlify
Introduces support for detecting changes and deletions of .env files in the dev agent, emitting corresponding events to the websocket server. The websocket server now handles these events, synchronizing environment variables with Netlify using new methods in the Netlify service. This ensures that environment variable changes in local .env files are reflected in the associated Netlify site, with safety checks to avoid accidental deletion of remote variables.

--- a/vybcel_architecture_part1.ini
+++ b/vybcel_architecture_part1.ini
@@ -316,4 +316,101 @@ sequenceDiagram
         end
     end
 
+    %% === 3.5. ENV FILES SYNCHRONIZATION ===
+    rect rgb(240, 255, 240)
+        Note over V,N: 3️⃣.5️⃣ СИНХРОНИЗАЦИЯ .ENV ФАЙЛОВ - автоматическая синхронизация переменных окружения с Netlify
+        
+        loop Пользователь редактирует .env файлы
+            U->>V: Редактирует .env файл например .env.local или .env.production
+            Note right of V: Вносит изменения в переменные окружения API_KEY DATABASE_URL и др.
+            
+            V->>V: Пользователь нажимает Ctrl+S или Cmd+S для сохранения env файла
+            Note right of V: .env файл сохраняется в локальную файловую систему
+            
+            V->>C: envWatcher (отдельный chokidar) обнаруживает изменение .env файла
+            Note right of C: Специальный watcher отслеживает только .env* файлы
+            Note right of C: Отслеживает: .env .env.local .env.development .env.production .env.test
+            
+            C->>C: Читает содержимое .env файла с помощью fs.readFileSync
+            Note right of C: Получает полный текст env файла с переменными KEY=value
+            
+            C->>WS: emit env_file_change отправляет содержимое .env файла
+            Note right of C: НЕ СОХРАНЯЕТ в pending_changes - .env файлы НЕ коммитятся в GitHub
+            Note right of C: Отправляет projectId filePath content timestamp
+            
+            WS->>WS: socket.on env_file_change обрабатывает событие env файла
+            Note right of WS: Получает содержимое .env файла от локального агента
+            
+            WS->>DB: ProjectQueries.getProjectById получает проект с netlify_site_id
+            Note right of DB: Проверяет что проект настроен с Netlify для синхронизации env
+            DB-->>WS: Объект проекта с netlify_site_id для синхронизации
+            
+            alt Проект настроен с Netlify (netlify_site_id существует)
+                WS->>WS: NetlifyService.parseEnvContent парсит .env содержимое
+                Note right of WS: Извлекает валидные переменные KEY=value игнорируя комментарии
+                Note right of WS: Поддерживает кавычки и экранирование символов
+                
+                WS->>N: NetlifyService.syncEnvFile синхронизирует переменные с Netlify
+                Note right of N: POST /sites/{site_id}/env обновляет переменные окружения
+                Note right of N: Context: production Scopes: builds + functions
+                Note right of N: Безопасный режим - НЕ удаляет существующие переменные
+                
+                alt Синхронизация успешна
+                    N-->>WS: Возвращает успешный статус обновления переменных
+                    
+                    WS->>W: io.to projectId emit env_sync_success уведомляет все клиенты
+                    WS->>T: WebSocket событие env_sync_success обновляет toolbar
+                    Note right of W: Браузер показывает уведомление "Environment variables synced"
+                    Note right of T: Toolbar показывает зеленое уведомление об успешной синхронизации
+                    
+                    WS-->>C: emit env_sync_result подтверждает успешную синхронизацию
+                    Note right of C: Агент получает подтверждение синхронизации env переменных
+                    
+                else Ошибка синхронизации
+                    N-->>WS: Возвращает ошибку Netlify API или validation
+                    
+                    WS->>W: io.to projectId emit env_sync_error уведомляет об ошибке
+                    WS->>T: WebSocket событие env_sync_error показывает ошибку
+                    Note right of W: Браузер показывает красное уведомление с деталями ошибки
+                    Note right of T: Toolbar показывает предупреждение о неудачной синхронизации
+                    
+                    WS-->>C: emit env_sync_result с error статусом
+                    Note right of C: Агент получает информацию об ошибке синхронизации
+                end
+            else Проект НЕ настроен с Netlify
+                WS-->>C: emit env_sync_result с ошибкой "No Netlify site configured"
+                Note right of C: Агент получает предупреждение что Netlify не настроен
+                Note right of WS: .env изменения не синхронизируются до создания Netlify site
+            end
+        end
+        
+        alt Пользователь удаляет .env файл
+            U->>V: Удаляет .env файл из проекта
+            V->>C: envWatcher обнаруживает удаление .env файла
+            
+            C->>WS: emit env_file_delete уведомляет об удалении env файла
+            Note right of C: Отправляет projectId filePath timestamp
+            
+            WS->>WS: socket.on env_file_delete обрабатывает удаление
+            Note right of WS: БЕЗОПАСНЫЙ режим - НЕ удаляет переменные из Netlify автоматически
+            Note right of WS: Сохраняет переменные в Netlify для безопасности пользователя
+            
+            WS->>W: io.to projectId emit env_file_deleted уведомляет о удалении файла
+            WS->>T: WebSocket событие env_file_deleted информирует toolbar
+            Note right of W: Браузер показывает "Env file deleted. Netlify variables preserved."
+            Note right of T: Toolbar информирует что переменные сохранены в Netlify
+            
+            WS-->>C: emit env_sync_result подтверждает обработку удаления
+            Note right of C: Агент получает подтверждение что удаление обработано безопасно
+        end
+        
+        Note over U,N: 🔐 БЕЗОПАСНОСТЬ ENV СИНХРОНИЗАЦИИ
+        Note right of C: .env файлы ИСКЛЮЧЕНЫ из git tracking и НЕ попадают в GitHub коммиты
+        Note right of WS: Только валидные KEY=value переменные синхронизируются с Netlify
+        Note right of N: Переменные безопасно хранятся в Netlify и используются при деплое
+        Note right of N: Production context и builds+functions scopes для безопасности
+        Note right of WS: НЕ удаляет существующие переменные при синхронизации (безопасный режим)
+        Note right of U: Локальные .env файлы остаются в .gitignore и не коммитятся
+    end
+
     Note over U,N: ➡️ ПРОДОЛЖЕНИЕ ВО ВТОРОЙ ЧАСТИ: Сохранение изменений, деплой, управление проектом 
