--- a/vybcel_architecture_part2.ini
+++ b/vybcel_architecture_part2.ini
@@ -35,6 +35,10 @@ sequenceDiagram
             Note right of DB: SELECT * FROM pending_changes WHERE project_id = projectId
             DB-->>WS: Массив объектов с file_path content action для каждого файла
             
+            Note right of WS: 🔐 .ENV ФАЙЛЫ НЕ КОММИТЯТСЯ - они синхронизируются отдельно с Netlify
+            Note right of WS: Pending changes содержат только код файлы (js tsx css md и др.)
+            Note right of WS: Переменные окружения уже синхронизированы с Netlify через env_file_change
+            
             WS->>APP: Запрос нового installation token для GitHub App ID 1390062
             Note right of APP: Генерирует свежий installation token действующий 60 минут
             APP-->>WS: Возвращает installation_token для авторизации GitHub
@@ -185,6 +189,8 @@ sequenceDiagram
         
         N->>N: Выполняет команды сборки из настроек сайта
         Note right of N: pnpm install && pnpm build создает production версию
+        Note right of N: 🔐 Использует переменные окружения синхронизированные через env_file_change
+        Note right of N: ENV переменные доступны в процессе сборки (NODE_ENV API_KEY и др.)
         
         alt Сборка успешна
             N->>N: Деплоит собранные файлы в CDN
@@ -373,6 +379,17 @@ sequenceDiagram
         Note right of V: Команды: startProject, openPreview, fixConnection, resetProjectHistory
         Note right of V: Интеграция с vscode-utils.ts для кросс-платформенной поддержки VS Code/Cursor
         
+        Note over U,W: ENV SYNC АРХИТЕКТУРА
+        Note right of C: Отдельный envWatcher отслеживает только .env* файлы изолированно
+        Note right of C: .env файлы ИСКЛЮЧЕНЫ из основного file watcher и git tracking
+        Note right of WS: WebSocket события: env_file_change env_file_delete env_sync_success/error
+        Note right of WS: NetlifyService API интеграция для синхронизации переменных окружения
+        Note right of N: Переменные синхронизируются с production context и builds+functions scopes
+        Note right of N: Безопасный режим - НЕ удаляет существующие переменные при синхронизации
+        Note right of U: Real-time уведомления о статусе синхронизации env переменных
+        Note right of U: .env изменения мгновенно попадают в Netlify БЕЗ коммита в GitHub
+        Note right of U: Локальные .env файлы остаются приватными и НЕ попадают в git
+        
         Note over U,W: КЛЮЧЕВЫЕ АРХИТЕКТУРНЫЕ ОСОБЕННОСТИ
         Note right of U: Пользователь НИКОГДА не логинится в GitHub
         Note right of U: Все GitHub операции через платформенный GitHub App
@@ -386,6 +403,8 @@ sequenceDiagram
         Note right of U: SERVERLESS-SAFE: Все тяжелые операции перенесены в Railway
         Note right of U: Next.js выполняет только быстрые HTTP вызовы к WebSocket серверу
         Note right of U: Railway окружение не засыпает - фоновые задачи гарантированно завершаются
+        Note right of U: ENV SYNC: .env файлы автоматически синхронизируются с Netlify БЕЗ коммитов
+        Note right of U: Безопасность env: переменные НЕ попадают в git но доступны при деплое
         
         Note over U,W: НАВИГАЦИЯ И UX
         Note right of U: Упрощенная навигация - только 2-3 таба Overview Onboarding Settings
@@ -397,4 +416,6 @@ sequenceDiagram
         Note right of U: Плавающий интерфейс не мешает процессу разработки
         Note right of U: Компактные уведомления о статусе операций
         Note right of U: VS Code Extension для улучшенного workflow разработки
+        Note right of U: Real-time уведомления о синхронизации .env переменных
+        Note right of U: Автоматическая синхронизация env файлов БЕЗ дополнительных действий
     end 
