--- a/templates/vite-react/package.json
+++ b/templates/vite-react/package.json
@@ -8,11 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "sync": "phion",
-    "start": "run-s phion:install phion:upgrade phion:update-extensions phion:start",
-    "phion:install": "pnpm install",
-    "phion:upgrade": "pnpm upgrade",
-    "phion:start": "pnpm start",
-    "phion:update-extensions": "node scripts/extension-update.js",
+    "start": "pnpm install && pnpm upgrade && node scripts/extension-update.js && node scripts/start-with-browser.js",
     "fix": "node scripts/fix-phion.js",
     "setup:browser": "node scripts/install-browser-extension.js",
     "clear:ports": "node -e \"require('child_process').exec(process.platform === 'win32' ? 'for /f \\\"tokens=5\\\" %a in (\\'netstat -ano ^| findstr :5173 :3333 :3334\\') do taskkill /F /PID %a' : 'lsof -ti:5173,3333,3334 | xargs kill -9 2>/dev/null || true'); console.log('✅ All dev ports (5173, 3333, 3334) cleared!');\"",
@@ -66,7 +62,6 @@
     "@21st-extension/toolbar": "latest",
     "@21st-extension/toolbar-react": "latest",
     "@types/node": "^20.0.0",
-    "npm-run-all": "^4.1.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
